changed selectors to see if bug on mobile with two scaled images persists

--- a/src/components/SecondaryPostsCarousel/secondary-posts-carousel.module.scss
+++ b/src/components/SecondaryPostsCarousel/secondary-posts-carousel.module.scss
@@ -48,12 +48,12 @@
     width:50%;
 }
 
-.active-slide{
-    transform:scale(1);
+.carousel > div:nth-of-type(1) > div {
+    transform:scale(0.75);
     transition:0.5s;
 }
 
-.inactive-slide{
-    transform:scale(0.75);
+.carousel > div:nth-of-type(1) > .active-slide{
+    transform:scale(1);
     transition:0.5s;
 }
